k8s/deployment-configmap-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: fbworkshop.azurecr.io/cluk/demo:1.2
        ports:
        - containerPort: 8080
          name: springboot8080
        volumeMounts:
        - name: config
          mountPath: /etc/demo
      volumes:
      - name: config
        configMap:
          name: demo-config
