k8s/deployment-resources-optimized.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: registry.pingworks.net/docker/ws-demo:1.4
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 1000m
            memory: 25Mi
          limits:
            cpu: 1000m
            memory: 350Mi
        # ./java-buildpack-memory-calculator -loadedClasses 7000 -poolType metaspace -stackThreads 25 -totMemory 512M
        #command: ["java", "-Xmx189367K","-Xss1M","-XX:ReservedCodeCacheSize=240M","-XX:MaxDirectMemorySize=10M","-XX:MaxMetaspaceSize=53320K", "-jar", "app.jar"]
        # ./java-buildpack-memory-calculator -loadedClasses 7000 -poolType metaspace -stackThreads 25 -totMemory 350M
        command: ["java", "-Xmx24612K","-Xss1M","-XX:ReservedCodeCacheSize=240M","-XX:MaxDirectMemorySize=10M","-XX:MaxMetaspaceSize=52187K", "-jar", "app.jar"]
