k8s/deployment-ro-root-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: registry.pingworks.net/docker/ws-demo:1.4
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 1000m
            memory: 25Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        command: ["java", "-Xmx190500K","-Xss1M","-XX:ReservedCodeCacheSize=240M","-XX:MaxDirectMemorySize=10M","-XX:MaxMetaspaceSize=52187K","-jar", "app.jar"]
        securityContext:
          runAsUser: 65534
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir:
