k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: fbworkshop.azurecr.io/cluk/demo:1.3
        ports:
        - containerPort: 8080
          name: springboot8080
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 1Gi
