k8s/pod-security.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    app: demo
spec:
  containers:
  - name: demo
    image: pingworks/ws-toolbox:1.0
    command: ["sleep", "99999"]
