k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    app: demo
spec:
  containers:
  - name: demo
    image: fbworkshop.azurecr.io/cluk/demo:1.0
    ports:
    - containerPort: 8080
