k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  selector:
    app: demo
  ports:
  - name: demo80
    port: 80
    targetPort: springboot8080
    protocol: TCP
