k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
  - host: demo.workshop1.user.azure.fleetboard.net
    http:
      paths:
      - path: /
        backend:
          serviceName: demo
          servicePort: 80
